[tool.poetry]
name = "weather-co2-station"
version = "0.1.0"
description = ""
authors = ["Yuval Adam <_@yuv.al>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
smbus = "^1.1.post2"
hidapi = "^0.14.0.post2"
co2meter = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
